[package]
name = "map-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
bytemuck = "1.24.0"
cxx = "1.0"
env_logger = "0.11"
glow = "0.16"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
log = "0.4.29"
log4rs = "1.4"
pollster = "0.4"
wgpu = "25"
winit = "0.30"

[build-dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
bindgen = "0.72"
cxx-build = "1.0"
pkg-config = "0.3"
shlex = "1.3.0"
