[package]
name = "map-explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
bytemuck = "1.24.0"
cxx = "1.0"
directories = "6.0"
imgui = "0.12"
imgui-wgpu = "0.25"
imgui-winit-support = "0.13"
imgui-sys = "0.12"
log = "0.4.29"
log4rs = "1.4"
pollster = "0.4"
wgpu = "25"
winit = "0.30"
regex = { version = "1.12.2", features = ["logging"] }

[build-dependencies]
anyhow = { version = "1.0", features = ["std", "backtrace"] }
bindgen = "0.72"
cmake = "0.1.54"
cxx-build = "1.0"
git2 = "0.20.3"
pkg-config = "0.3"
shlex = "1.3.0"
